Duplifaced objects are not drawn in edit mode #60999

Closed
opened 2019-01-29 23:01:38 +01:00 by Artem · 10 comments

System Information
Operating system: Win 10
Graphics card: 1080 Ti

Blender Version
Broken:
2.80 957b4547ae
Worked:
2.79b or master

Short description of error
So whenever you enter edit-mode for dupli-face objects(the main one, not the children), the objects on duplifaces disappear. In 2.79 they were drawn on duplifaces even in edit mode (which is imho a better behavior cos you can see what's happening)

Exact steps for others to reproduce the error
Add any object to the scene, add a plane, add an array modifier to that plane, parent the plane to the object and switch dupliface instancing on. Enter edit mode on plane and the instances arent drawn in the viewport

**System Information** Operating system: Win 10 Graphics card: 1080 Ti **Blender Version** Broken: 2.80 957b4547aeeb Worked: 2.79b or master **Short description of error** So whenever you enter edit-mode for dupli-face objects(the main one, not the children), the objects on duplifaces disappear. In 2.79 they were drawn on duplifaces even in edit mode (which is imho a better behavior cos you can see what's happening) **Exact steps for others to reproduce the error** Add any object to the scene, add a plane, add an array modifier to that plane, parent the plane to the object and switch dupliface instancing on. Enter edit mode on plane and the instances arent drawn in the viewport
Author

Added subscriber: @Hickz

Added subscriber: @Hickz
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Cannot reproduce here, see
#60999.blend

Does this file work for you?

If there are still problems in your scene, please attach it here...

Cannot reproduce here, see [#60999.blend](https://archive.blender.org/developer/F6451584/T60999.blend) Does this file work for you? If there are still problems in your scene, please attach it here...
Member

marking as incomplete until we hear back...

marking as incomplete until we hear back...
Author

#60999.blend

This is what i rather meant. The objects disappear from arrayed planes in edit mode (Plus try moving the plane, the instanced object isn't following it real time, updates only if you exit edit mode. 2.79 was realtime plus the objects are shown on modifiers)

[#60999.blend](https://archive.blender.org/developer/F6454572/T60999.blend) This is what i rather meant. The objects disappear from arrayed planes in edit mode (Plus try moving the plane, the instanced object isn't following it real time, updates only if you exit edit mode. 2.79 was realtime plus the objects are shown on modifiers)
Author

In #60999#609838, @lichtwerk wrote:
marking as incomplete until we hear back...

Is any other info needed?

> In #60999#609838, @lichtwerk wrote: > marking as incomplete until we hear back... Is any other info needed?

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Sergey Sharybin was assigned by Sebastian Parborg 2019-02-09 15:34:09 +01:00

I'm guessing this is a depsgraph thing?

I'm guessing this is a depsgraph thing?

This issue was referenced by f16763a01d

This issue was referenced by f16763a01dfb0b9fe534d468740f49e147ea12a6

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60999
No description provided.