Fix T60999: Duplifaced objects are not drawn in edit mode

Seems to be rather trivial change to use proper cage mesh nowadays.